# leukocyte

./: .gitignore  .gitmodules  .leukocyte.resolved.json  .rubocop.yml  .rubocop2.yml  .rubocop3.yml  CHANGELOG.md  CMakeLists.txt  README.md  _tmp_test_config_edge  bench_indentation_consistency_results.csv  err.txt  gprof.txt  out.json  tmp_test_yaml  tmp_test_yaml.c
.devcontainer/: Dockerfile  devcontainer.json
.github/: TODO.md  copilot-instructions.md
.leukocyte/: README  gitignore.template  index.json
aaaa/: aaaa.rb
aaaa/bbbb/: trailing.rb
bench/: .rubocop.yml  bench_10000.rb  bench_100000.rb  bench_2000.rb  bench_5000.rb  run_bench.py  run_bench_parallel.py
bench/multi_1000/: bench_1000_92.rb
bench/multi_10000/: bench_10000_7.rb
bench/multi_2000/: bench_2000_3.rb
bench/multi_200000/: bench_200000_7.rb
bench/multi_5000/: bench_5000_0.rb
build_gprof/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  leuko  test_cli  test_config_loader  test_config_loader_edgecases  test_generated_config  test_io_scan  test_leukocyte  test_loader_fullname  test_rule_manager  test_rule_registry  test_yaml_case_sensitive  test_yaml_helpers
cmake/: CJSON.cmake  LeukoHelpers.cmake  LibUV.cmake  LibYAML.cmake  Prism.cmake  README.md
include/: category.h  cli.h  leuko_allocator.h  leuko_debug.h  leukocyte.h  parse.h  prism_xallocator.h  rule_registry.h  rules_list.h  severity.h  version.h
include/allocator/: arena.h  prism_xallocator.h
include/cli/: cli.h  collect.h  config_cache.h  exit_code.h  formatter.h  init.h  parser.h  sync.h
include/common/: category.h  generated_rules.h  (+3 more)
schema/: layout.json
scripts/: compiled_config_schema.json  export_rubocop_config.rb  generate_schema.py  normalize_config.rb  run_generator.sh  sync_configs.rb
src/: CMakeLists.txt  category.c  diagnostic_debug_stub.c  leuko_allocator.c  leuko_debug.c  main.c  parse.c  rule_registry.c  severity.c
src/allocator/: arena.c  prism_xallocator.c  prism_xallocator_wrappers.c
src/cli/: cli.c  collect.c  formatter.c  formatter_bridge.c  init.c  parser.c  sync.c
src/common/: generated_rules.c  rule_registry.c
src/common/registry/: rule_registry.c
src/configs/: compiled_config.c  config.c  config_cache.c  config_defaults.c  config_file.c  config_registry.c  diagnostics.c  discover.c  generated_config.c  inherit_cache.c  loader.c  merge.c  raw_config.c  walker.c  yaml_helpers.c  yaml_reader.c
src/configs/common/: all_cops_config.c  category_config.c  config.c  general_config.c  rule_config.c
src/configs/conversion/: loader.c  merge.c  yaml_helpers.c
src/configs/discovery/: discover.c  inherit.c  inherit_cache.c  raw_config.c
src/configs/layout/: indentation_consistency.c  indentation_style.c  indentation_width.c  line_length.c
src/configs/lint/: debugger.c
src/configs/loader/: loader.c  merge.c  yaml_helpers.c
src/configs/schema/: CMakeLists.txt  layout_deser.c  validator.c
src/io/: file.c  processed_source.c  scan.c
src/rules/: rule.c  rule_manager.c
src/rules/common/: rule_manager.c
src/rules/layout/: indentation.c  indentation_consistency.c  indentation_style.c  indentation_width.c  line_length.c
src/rules/lint/: debugger.c
src/sources/: leuko_glob.c
src/sources/json/: parse.c
src/sources/node/: node_stub.c
src/sources/ruby/: collector.c
src/sources/yaml/: merge.c  parse.c  yaml_stub.c
src/util/: string_array.c
src/utils/: glob_to_regex.c  string_array.c
src/utils/allocator/: arena.c  prism_xallocator.c
src/worker/: jobs.c  pipeline.c
tests/: CMakeLists.txt  cli_cfg.yml  test_arena.c  test_cli.c  test_config_discover.c  test_config_inherit.c  test_config_inherit_cache.c  test_config_loader.c  test_config_loader_edgecases.c  test_config_map_merge.c  test_config_merge.c  test_config_raw_loader.c  test_config_ro_lookup.c  test_config_warm_cache.c  test_diagnostic_free.c  test_file_collector.c  test_generated_config.c  test_glob.c  test_glob_parallel.c  test_io_scan.c  test_loader_fullname.c  test_main.c  test_merge_type_conflict.c  test_newline_capacity.c  test_parser_arena.c  test_pipeline.c  test_pos2line_cache.c  test_processed_source.c  test_rule_manager.c  test_rule_manager_threaded.c  test_rule_registry.c  test_string_array.c  test_yaml_case_sensitive.c  test_yaml_helpers.c  tmp_cache_child.yml  tmp_cache_parent.yml  tmp_child.yml  tmp_inherit_base.yml  tmp_inherit_base2.yml  tmp_inherit_base_badchild.yml  (+7 more)
tests/bench/: bench_50000.rb  bench_python_100000.py  bench_python_200000.py  bench_python_5000.py  bench_python_50000.py  bench_runner.py  hyperfine_full_10000.json  hyperfine_full_100000.json  hyperfine_full_200000.json  hyperfine_full_5000.json  hyperfine_rerun_10000.json  hyperfine_rerun_100000.json  hyperfine_rerun_200000.json  hyperfine_rerun_5000.json  hyperfine_ruff_100000.json  hyperfine_ruff_200000.json  hyperfine_ruff_5000.json  hyperfine_ruff_50000.json  run_bench.sh  run_scaling.py  sweep_arena.sh  sweep_results.csv
tests/bench/multi_100000/: bench_100000_1.rb
tests/c/: test_leuko_config_integration.c  test_leuko_indentation.c
tests/configs/: test_access_by_path.c  test_categories_view_parity.c  test_category_set_get.c  test_compiled_config.c  test_generated_registry.c  test_materialize.c  test_move_preserve_specific.c  test_normalize_rules.c  test_precompile_category_rule_patterns.c  test_precompile_patterns.c  test_rule_apply_merged.c  test_schema_validation.c  test_walker.c
tests/discover_parent/: .rubocop.yml
tests/ruby/: test.rb
tests/scripts/: test_c_from_json.rb  test_categories_pattern_properties.rb  test_category_rules_required.rb  test_gen_rule_struct.rb  test_generator_bulk.rb  test_integration_generate_and_load.rb  test_normalize_config.rb  test_snake_case_normalization.rb  test_unknown_rules_ignored.rb
tests/sources/: test_parse_to_node.c
tests/tmp_cfg/: .rubocop.yml
tests/tmp_norm/: .rubocop.yml
tests/tmp_precompile2/: .rubocop.yml
tests/tmp_walker/: .rubocop.yml
tests/tmp_walker/child/: .rubocop.yml
tools/: gen_rule_struct  gen_rule_struct.c  malloc_profiler.c
(+71 files in other folders)
