# Tests for configs/compiled_config
add_executable(test_compiled_config configs/test_compiled_config.c)
# Ensure project include headers are visible for tests
target_include_directories(test_compiled_config PRIVATE ${CMAKE_SOURCE_DIR}/include)
# Link against library and yaml if available
if(TARGET libyaml::yaml)
    target_link_libraries(test_compiled_config PRIVATE leuko_lib libyaml::yaml pthread)
elseif(TARGET yaml)
    target_link_libraries(test_compiled_config PRIVATE leuko_lib yaml pthread)
else()
    target_link_libraries(test_compiled_config PRIVATE leuko_lib pthread)
endif()

# walker test
add_executable(test_walker configs/test_walker.c)
target_include_directories(test_walker PRIVATE ${CMAKE_SOURCE_DIR}/include)
if(TARGET libyaml::yaml)
    target_link_libraries(test_walker PRIVATE leuko_lib libyaml::yaml pthread)
elseif(TARGET yaml)
    target_link_libraries(test_walker PRIVATE leuko_lib yaml pthread)
else()
    target_link_libraries(test_walker PRIVATE leuko_lib pthread)
endif()
add_test(NAME test_walker COMMAND test_walker)
if(TARGET libyaml::yaml)
    target_link_libraries(test_compiled_config PRIVATE leuko_lib libyaml::yaml pthread)
elseif(TARGET yaml)
    target_link_libraries(test_compiled_config PRIVATE leuko_lib yaml pthread)
else()
    target_link_libraries(test_compiled_config PRIVATE leuko_lib pthread)
endif()
add_test(NAME test_compiled_config COMMAND test_compiled_config)

# normalize rules test
add_executable(test_normalize_rules configs/test_normalize_rules.c)
target_include_directories(test_normalize_rules PRIVATE ${CMAKE_SOURCE_DIR}/include)
if(TARGET libyaml::yaml)
    target_link_libraries(test_normalize_rules PRIVATE leuko_lib libyaml::yaml pthread)
elseif(TARGET yaml)
    target_link_libraries(test_normalize_rules PRIVATE leuko_lib yaml pthread)
else()
    target_link_libraries(test_normalize_rules PRIVATE leuko_lib pthread)
endif()
add_test(NAME test_normalize_rules COMMAND test_normalize_rules)

# precompile patterns test
add_executable(test_precompile_patterns configs/test_precompile_patterns.c)
target_include_directories(test_precompile_patterns PRIVATE ${CMAKE_SOURCE_DIR}/include)
if(TARGET libyaml::yaml)
    target_link_libraries(test_precompile_patterns PRIVATE leuko_lib libyaml::yaml pthread)
elseif(TARGET yaml)
    target_link_libraries(test_precompile_patterns PRIVATE leuko_lib yaml pthread)
else()
    target_link_libraries(test_precompile_patterns PRIVATE leuko_lib pthread)
endif()
add_test(NAME test_precompile_patterns COMMAND test_precompile_patterns)

add_executable(test_precompile_category_rule_patterns configs/test_precompile_category_rule_patterns.c)
target_include_directories(test_precompile_category_rule_patterns PRIVATE ${CMAKE_SOURCE_DIR}/include)
if(TARGET libyaml::yaml)
    target_link_libraries(test_precompile_category_rule_patterns PRIVATE leuko_lib libyaml::yaml pthread)
elseif(TARGET yaml)
    target_link_libraries(test_precompile_category_rule_patterns PRIVATE leuko_lib yaml pthread)
else()
    target_link_libraries(test_precompile_category_rule_patterns PRIVATE leuko_lib pthread)
endif()
add_test(NAME test_precompile_category_rule_patterns COMMAND test_precompile_category_rule_patterns)

# parse -> node test
add_executable(test_parse_to_node sources/test_parse_to_node.c)
target_include_directories(test_parse_to_node PRIVATE ${CMAKE_SOURCE_DIR}/include)
if(TARGET libyaml::yaml)
    target_link_libraries(test_parse_to_node PRIVATE leuko_lib libyaml::yaml pthread)
elseif(TARGET yaml)
    target_link_libraries(test_parse_to_node PRIVATE leuko_lib yaml pthread)
else()
    target_link_libraries(test_parse_to_node PRIVATE leuko_lib pthread)
endif()
add_test(NAME test_parse_to_node COMMAND test_parse_to_node)
